# TL2-RE

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: EditorGuts-RE-MOD-pack-and-read.md  EditorGuts逆向-MOD打包与读取-完整记录.md  性能优化记录.md
mikuro_mod_packer/: __init__.py  __main__.py  bindat.py  binlayout.py  packer.py  raw.py  rghash.py
mikuro_mod_packer/data/: binlayout_datagroup_tags.json  binlayout_schema.json
mikuro_mod_packer/mpp/: __init__.py  __main__.py  dat.py  dll.py  geom.py  layout.py  native.py  native_nb.py  ogre_mesh.py  pipeline.py  region.py  rules.py  writer.py
tests/: test_mpp_re.py  test_packer.py
tools/: analyze_toc.py  bench_all_mods.py  bench_native.py  build_datagroup_tags.py  build_layout_schema.py  cmp_bindat.py  cmp_mod.py  eval_all_mpp.py  eval_all_summary.py  mod_disasm.py  mpp_compare_full.csv  mpp_survey.json  mpp_survey.py  pack_to_game.py  perf_overlap.py  perf_pack_compress.py  perf_raw.py  perf_unitdata.py  proto_hash_bindat.py  verify_container_writer.py  verify_hash_bindat.py  verify_mp.py  verify_rghash.py
tools/tl2_console_fork/: EditorDLL.cs  Program.cs  README.MD  TL2-Mikuro-Console.csproj  TL2-Mikuro-Console.sln
tools/tl2_console_fork/Properties/: AssemblyInfo.cs
